turtleart.housemany.HouseMany.scala.error
Compilation error:
HouseMany:2: error: type mismatch;
 found   : Double
 required: Int
  var X:Int = getX()
                  ^HouseMany:3: error: type mismatch;
 found   : Double
 required: Int
  var Y:Int = getY()
                  ^